# dusql

./: .buildinfo  .codacy.yml  .codecov.yml  .gitattributes  .gitignore  .prospector.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  alembic.ini  api.html  cli.html  db.html  genindex.html  index.html  mailer.py  meta.yaml  objects.inv  run_scan.sh  run_update.sh  search.html  searchindex.js  setup.cfg  setup.py
.circleci/: config.yml
_sources/: api.rst.txt  cli.rst.txt
doc/: conf.py  db.rst  index.rst
sql/: dusql_history_update.sql  dusql_schema.sql
src/dusql/: _version.py  check.py  cli.py  closure_ext.py  config.py  db.py  find.py  mdss.py  model.py  report.py  scan.py  tags.py  upsert_ext.py  view_ext.py
src/dusql/alembic/: env.py
src/dusql/alembic/versions/: 203b23add962_full_paths.py  99a0585c3dfa_splitpaths.py  cd1e516f0995_paths_table.py
src/dusql/handler/: __init__.py  file.py  mdss.py
src/grafanadb/: _version.py  cli.py  db.py  dusql_scan.py  find.py  model.py  ncdu.py  server.py  unreadable_dirs.py
tables/: views.dump
test/: conftest.py  test_checks.py  test_cli.py  test_config.py  test_find.py  test_import.py  test_mdss.py  test_model.py  test_report.py  test_scan.py  test_tags.py
tests/: fixtures.py  test_find.py  test_model.py  test_server.py
