[metadata]
name = dusql
description = SQL Based Disk Usage Analyser
long_description = file: README.rst
url = https://github.com/coecms/dusql
license = Apache v2.0
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = true
package_dir =
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    dusql = dusql.cli:main

[versioneer]
VCS = git
style = pep440
versionfile_source = src/dusql/_version.py
versionfile_build = dusql/_version.py
tag_prefix =
parentdir_prefix = dusql-

[coverage:run]
source=dusql

[coverage:paths]
source=
	src/dusql
	$CONDA_PREFIX/lib/python*/site-packages/dusql
