[metadata]
name = grafanadb
long_description = file: README.rst
url = https://github.com/coecms/grafanadb
license = Apache v2.0
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = true
package_dir =
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =

[versioneer]
VCS = git
style = pep440
versionfile_source = src/grafanadb/_version.py
versionfile_build = grafanadb/_version.py
tag_prefix =
parentdir_prefix = grafanadb-

[coverage:run]
source=dusql
omit=
    src/dusql/_version.py

[coverage:paths]
source=
	src/dusql
	$CONDA_PREFIX/lib/python*/site-packages/dusql
